--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@ function login(){
 	var username = user.value;
 	var password = pass.value;
 	alert("before");
-	$.getJSON("https://ouprogramming.github.io/smartbuyers/data.js", (data) => {
-		var userdict = JSON.parse(data);
+	$.getJSON("https://ouprogramming.github.io/smartbuyers/data.js", (userdict) => {
 		alert("jsonOK");
 		var namelist = Object.keys(userdict);
 		if(namelist.indexOf(username) !== -1){
@@ -29,7 +28,7 @@ function login(){
 			localStorage.setItem('currentuser', username);
 			localStorage.setItem('userdict', JSON.stringify(userdict));
 			window.location.href = 'setting.html';
-  	}
+		}
 	});
 	alert("after");
 }
