--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@ function login(){
 	var pass = document.getElementById("password");
 	var username = user.value;
 	var password = pass.value;
-	alert("before");
-	$.getJSON("https://ouprogramming.github.io/smartbuyers/data.js", (userdict) => {
-		alert("jsonOK");
-		var namelist = Object.keys(userdict);
-		if(namelist.indexOf(username) !== -1){
-			if(userdict[username][0]==password){
-				localStorage.setItem('currentuser', username);
-				window.location.href = 'compare.html';
-			}else{
-				alert("ログインに失敗しました。\nもしくは既に使われているユーザーネームです。");
-			}
-		}else{
-			userdict[username] = [password,[],{}];
-			alert("新規登録に成功しました。");
-			localStorage.setItem('currentuser', username);
-			localStorage.setItem('userdict', JSON.stringify(userdict));
-			window.location.href = 'setting.html';
-		}
+	var url = 'https://ouprogramming.github.io/smartbuyers/data.json';
+	$.getJSON(url, function(data){
+		var userdict = data
+  	console.log('data : ', data);
 	});
+	var namelist = Object.keys(userdict);
+	if(namelist.indexOf(username) !== -1){
+		if(userdict[username][0]==password){
+			localStorage.setItem('currentuser', username);
+			window.location.href = 'compare.html';
+		}else{
+			alert("ログインに失敗しました。\nもしくは既に使われているユーザーネームです。");
+		}
+	}else{
+		userdict[username] = [password,[],{}];
+		alert("新規登録に成功しました。");
+		localStorage.setItem('currentuser', username);
+		localStorage.setItem('userdict', JSON.stringify(userdict));
+		window.location.href = 'setting.html';
+	}
 	alert("after");
 }
 </script>
