--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ function login(){
 	var password = pass.value;
 	var url = 'https://ouprogramming.github.io/smartbuyers/data.json';
 	$.getJSON(url, function(data){
-		var userdict = data
+		var userdict = data;
   	console.log('data : ', data);
 	});
 	var namelist = Object.keys(userdict);
