--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@ function login(){
 	var url = 'https://ouprogramming.github.io/smartbuyers/data.json';
 	$.getJSON(url, function(data){
 		var userdict = data;
+	})
+	.success(function(json) {
+    console.log("成功");
+	})
+	.error(function(jqXHR, textStatus, errorThrown) {
+    console.log("エラー：" + textStatus);
+    console.log("テキスト：" + jqXHR.responseText);
+	})
+	.complete(function() {
+    console.log("完了");
 	});
 	var namelist = Object.keys(userdict);
 	if(namelist.indexOf(username) !== -1){
