--- a/table.html
+++ b/table.html
@@ -25,10 +25,9 @@ function mktable(){
   var table = document.createElement('table');
   table.setAttribute("id","table");
   var userdict = JSON.parse(localStorage.getItem('userdict'));
-  var username = localStorage.getItem('currentuser');
-  var grocerydict = userdict[username][2];
+  var grocerydict = userdict[1];
   var grocerylist = Object.keys(grocerydict);
-  var shoplist0 = userdict[username][1];
+  var shoplist0 = userdict[0];
   var shoplist1 = shoplist0.filter(function( item ) {
     return item !== "";
   });
