--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 <script type="text/javascript">
 //basenum設定
 function start(){
-	try{
-		localStorage.getItem('userdict');
-	}catch{
+	if(localStorage.getItem('userdict')==null){
 		var userdict = [["","",""],{}];
 		localStorage.setItem('userdict', JSON.stringify(userdict));
 	}
+	document.getElementById("table").contentWindow.mktable();
 	var selectform = document.createElement('form');
 	var select = document.createElement('select');
 	select.setAttribute("id","select");
