--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@ function start(){
 	if(localStorage.getItem('userdict')==null){
 		var userdict = [["","",""],{}];
 		localStorage.setItem('userdict', JSON.stringify(userdict));
-	}
-	document.getElementById("table").contentWindow.mktable();
-	var selectform = document.createElement('form');
-	var select = document.createElement('select');
-	select.setAttribute("id","select");
-	select.setAttribute("class","selectstyle");
-	select.setAttribute("name","shop");
-	preparation();
-	var option0 = document.createElement('option');
-	option0.setAttribute("value","指定なし");
-	option0.setAttribute("label","指定なし");
-	option0.textContent = "指定なし";
-	select.appendChild(option0);
-	for(i=0;i<nos0;i++){
-		if(shoplist0[i]!==""){
-			var option1 = document.createElement('option');
-			option1.setAttribute("value",shoplist0[i]);
-			option1.setAttribute("label",shoplist0[i]);
-			option1.textContent = shoplist0[i];
-			select.appendChild(option1);
+		window.location.href = 'setting.html';
+	}else{
+		document.getElementById("table").contentWindow.mktable();
+		var selectform = document.createElement('form');
+		var select = document.createElement('select');
+		select.setAttribute("id","select");
+		select.setAttribute("class","selectstyle");
+		select.setAttribute("name","shop");
+		preparation();
+		var option0 = document.createElement('option');
+		option0.setAttribute("value","指定なし");
+		option0.setAttribute("label","指定なし");
+		option0.textContent = "指定なし";
+		select.appendChild(option0);
+		for(i=0;i<nos0;i++){
+			if(shoplist0[i]!==""){
+				var option1 = document.createElement('option');
+				option1.setAttribute("value",shoplist0[i]);
+				option1.setAttribute("label",shoplist0[i]);
+				option1.textContent = shoplist0[i];
+				select.appendChild(option1);
+			}
 		}
-	}
-	document.getElementById("selectcell").appendChild(select);
-	currentshop = 0;
+		document.getElementById("selectcell").appendChild(select);
+		currentshop = 0;
+	}	
 }
 
 function directinput(shop,name){
@@ -187,7 +189,7 @@ function register(){
 }
 
 function setting(){
-	;
+	window.location.href = 'setting.html';
 }
 
 function inputremove(){
