--- a/setting.html
+++ b/setting.html
@@ -57,22 +57,34 @@ function register(){
 }
 .buttonstyle{
 	display: block;
-	height:20%;
-	width:100%;
+	height:15%;
+	width:60%;
 	padding: 0em 0em;
 	font-size:400%;
+	text-align: center;
+	margin: 0 auto;
 }
 .shopnum{
+	font-size:300%;
 	width:20%;
 	display: inline-block;
+}
+.subjectbox{
+	height:15%;
+	width:60%;
+	padding: 0em 0em;
+	font-size:400%;
+	text-align: center;
+	margin: 0 auto;
 }
 </style>
 </head>
 <body>
-<p>店舗登録</p>
-<div><p class="shopnum">1</p><input type="text" class="textboxstyle" id="shop1"></input></div>
-<div><p class="shopnum">2</p><input type="text" class="textboxstyle" id="shop2"></input></div>
-<div><p class="shopnum">3</p><input type="text" class="textboxstyle" id="shop3"></input></div>
-<button type="button" onclick="register();">登録</button>
+<div class="subjectbox">店舗登録</div>
+<div><p class="shopnum">店舗1</p><input type="text" class="textboxstyle" id="shop1"></input></div>
+<div><p class="shopnum">店舗2</p><input type="text" class="textboxstyle" id="shop2"></input></div>
+<div><p class="shopnum">店舗3</p><input type="text" class="textboxstyle" id="shop3"></input></div>
+<br>
+<button type="button" onclick="register();" class="buttonstyle">登録</button>
 </body>
 </html>
